# twitch-notificator-console

./: .gitmodules  CMakeLists.txt  README.md  answers.h  com.c  com.h  config.c  config.h  history.c  history.h  lua.c  lua.h  main.c  main.h  network.c  network.h  parser.c  parser.h  plugin.c  plugin.h  shared.h  sound.c  sound.h  twitch.conf
answers/: CMakeLists.txt  twitch.c
lua_scripts/: test.lua
network/: CMakeLists.txt  network.c
plugins/test/: CMakeLists.txt  main.c
